{
  "version": 4,
  "terraform_version": "1.5.5",
  "serial": 15,
  "lineage": "8ee09d28-fecc-401c-aede-ba9535cf68c9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "lab_elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0332da598673a7994",
            "association_id": "eipassoc-05d9a9dcbcf3af806",
            "domain": "vpc",
            "id": "eipalloc-0332da598673a7994",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0e01451a00d11b894",
            "private_dns": "ip-10-0-1-236.ec2.internal",
            "private_ip": "10.0.1.236",
            "public_dns": "ec2-54-235-78-209.compute-1.amazonaws.com",
            "public_ip": "54.235.78.209",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:internet-gateway/igw-061c9ac016a682f28",
            "id": "igw-061c9ac016a682f28",
            "owner_id": "898736157205",
            "tags": {
              "Name": "lab_igw"
            },
            "tags_all": {
              "Name": "lab_igw"
            },
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "lab_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0332da598673a7994",
            "association_id": "eipassoc-05d9a9dcbcf3af806",
            "connectivity_type": "public",
            "id": "nat-04a6a69c300a80473",
            "network_interface_id": "eni-0e01451a00d11b894",
            "private_ip": "10.0.1.236",
            "public_ip": "54.235.78.209",
            "subnet_id": "subnet-0fbb34b97da35f65e",
            "tags": {
              "Name": "Lab NAT Gateway"
            },
            "tags_all": {
              "Name": "Lab NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.lab_elastic_ip",
            "aws_internet_gateway.lab_igw",
            "aws_subnet.lab_public_subnet",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab_vpc_private_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:route-table/rtb-057cfa5c34a4e1871",
            "id": "rtb-057cfa5c34a4e1871",
            "owner_id": "898736157205",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-04a6a69c300a80473",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_Private_RouteTable"
            },
            "tags_all": {
              "Name": "VPC_Private_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.lab_nat_gateway",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "lab_vpc_public_RouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:route-table/rtb-07c4e769ad25a29d2",
            "id": "rtb-07c4e769ad25a29d2",
            "owner_id": "898736157205",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-061c9ac016a682f28",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "VPC_Public_RouteTable"
            },
            "tags_all": {
              "Name": "VPC_Public_RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab_igw",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab_private_RouteTable_Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09f0c4b7c4387fe6c",
            "route_table_id": "rtb-057cfa5c34a4e1871",
            "subnet_id": "subnet-0234f1cb9a97bcbd7"
          },
          "dependencies": [
            "aws_nat_gateway.lab_nat_gateway",
            "aws_route_table.lab_vpc_private_RouteTable",
            "aws_subnet.lab_private_subnet",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "lab_public_RouteTable_Assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08153c0a84fe3219d",
            "route_table_id": "rtb-07c4e769ad25a29d2",
            "subnet_id": "subnet-0fbb34b97da35f65e"
          },
          "dependencies": [
            "aws_internet_gateway.lab_igw",
            "aws_route_table.lab_vpc_public_RouteTable",
            "aws_subnet.lab_public_subnet",
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lab_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:security-group/sg-0b03b8b767070b1ac",
            "description": "Allow SSH traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b03b8b767070b1ac",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16",
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "lab_sg",
            "name_prefix": "",
            "owner_id": "898736157205",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_ssh"
            },
            "tags_all": {
              "Name": "allow_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:subnet/subnet-0234f1cb9a97bcbd7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0234f1cb9a97bcbd7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898736157205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab_private_subnet"
            },
            "tags_all": {
              "Name": "lab_private_subnet"
            },
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "lab_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:subnet/subnet-0fbb34b97da35f65e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fbb34b97da35f65e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "898736157205",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "lab_public_subnet"
            },
            "tags_all": {
              "Name": "lab_public_subnet"
            },
            "vpc_id": "vpc-0e9b50b5fd06c282b"
          },
          "dependencies": [
            "aws_vpc.lab_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:898736157205:vpc/vpc-0e9b50b5fd06c282b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0abcb162ba7fd0d99",
            "default_route_table_id": "rtb-03c76e110c8fb0ea8",
            "default_security_group_id": "sg-059fe51ac18af9f4d",
            "dhcp_options_id": "dopt-07b25d06790afee4c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e9b50b5fd06c282b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03c76e110c8fb0ea8",
            "owner_id": "898736157205",
            "tags": {
              "Name": "lab_vpc"
            },
            "tags_all": {
              "Name": "lab_vpc"
            }
          }
        }
      ]
    }
  ]
}